@@ -1,5 +1,5 @@
  - implement shared memory segment allocator
- - implement size_tracking for standard memory_manager
+ 
  - implement offset_pointer unit tests 
  - complete implementation of unit tests for type manipulation library
  - remove simple_ptr
